<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/AnimalCatalogFragment">

    <fragment
        android:id="@+id/AnimalCatalogFragment"
        android:name="com.tonynowater.momotest.feature.animalcatalog.AnimaCatalogFragment"
        android:label="@string/animal_catalog_fragment_label"
        tools:layout="@layout/fragment_animal_catalog">

        <action
            android:id="@+id/action_AnimalCatalogFragment_to_AnimalCatalogDetailFragment"
            app:destination="@id/AnimalCatalogDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/AnimalCatalogDetailFragment"
        android:name="com.tonynowater.momotest.feature.animalcatalogdetail.AnimalCatalogDetailFragment"
        android:label="@string/animal_catalog_detail_fragment_label"
        tools:layout="@layout/fragment_animal_catalog_detail">

        <action
            android:id="@+id/action_AnimalCatalogDetailFragment_to_AnimalCatalogFragment"
            app:destination="@id/AnimalCatalogFragment" />

        <action
            android:id="@+id/action_AnimalCatalogDetailFragment_to_AnimalDetailFragment"
            app:destination="@id/AnimalDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/AnimalDetailFragment"
        android:name="com.tonynowater.momotest.feature.animaldetail.AnimalDetailFragment"
        android:label="@string/animal_detail_fragment_label"
        tools:layout="@layout/fragment_animal_detail">

        <action
            android:id="@+id/action_AnimalDetailFragment_to_AnimalCatalogDetailFragment"
            app:destination="@id/AnimalCatalogDetailFragment" />
    </fragment>
</navigation>