<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.animaldetail.AnimalDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewPicture"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="184:103"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:scaleType="centerCrop"
            tools:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/viewDividerBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewPicture">

            <TextView
                android:id="@+id/textviewName"
                style="@style/Theme.Text.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="大貓熊" />

            <TextView
                android:id="@+id/textviewNameEn"
                style="@style/Theme.Text.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Giant Panda" />

            <TextView
                style="@style/Theme.Text.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/alsoKnownTitle" />

            <TextView
                android:id="@+id/textViewAlsoKnown"
                style="@style/Theme.Text.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="貓熊、熊貓" />

            <TextView
                style="@style/Theme.Text.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/featureTitle" />

            <TextView
                android:id="@+id/textViewFeature"
                style="@style/Theme.Text.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1、 成熊身長約為120-180公分，體重約80-120公斤，幼熊出生時體長約10公分，體重約僅有150~200公克。\n 2、 具有強壯有力的四肢：後腳內八字撇，有利於在密林中走動時撥開竹子。\n 3、 腕骨特化成的偽拇指(不具備關節)，使得牠們能俐落地取食竹子。\n 4、 掌心覆有毛，使得大貓熊能夠在寒冷的雪地上行走。\n 5、大貓熊身體顏色主要為黑白兩色。耳朵、眼斑、鼻頭、肩背部和四肢為黑色，其餘部位為白色。相對比例較小的黑色耳朵有減少熱量散失的功能。" />

            <TextView
                style="@style/Theme.Text.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/behaviorTitle" />

            <TextView
                android:id="@+id/textViewBehavior"
                style="@style/Theme.Text.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1、獨居的動物，除了交配季節或雌性的育幼時期，牠們都是獨自居住的。\r\n2、最活躍的時間在早晨和黃昏，但竹子所含熱量低，為減少能量的消耗，牠們每天的睡眠時間約10小時，剩餘時間則大多在覓食和進食。" />

            <TextView
                android:id="@+id/textViewLastUpdate"
                style="@style/Theme.Text.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                tools:text="@string/lastUpdate" />

        </LinearLayout>

        <View
            android:id="@+id/viewDividerBottom"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="750dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>